[176396] ODA 3.2 API Changes Implementation and others (see http://wiki.eclipse.org/Galileo_DTP_ODA_API_Changes_Spec)

--- a/tests/org.eclipse.datatools.connectivity.oda.consumer.testdriver/plugin.xml
+++ b/tests/org.eclipse.datatools.connectivity.oda.consumer.testdriver/plugin.xml
@@ -86,6 +86,7 @@
               minArguments="1">
         </filterType>
         <filterType
+              class="org.eclipse.datatools.connectivity.oda.consumer.testdriver.spec.impl.MyCustomExpression"
               displayName="Between"
               id="1001"
               isNegatable="true"
@@ -145,6 +146,19 @@
               <variableClassRestriction
                     class="org.eclipse.datatools.connectivity.oda.consumer.testdriver.OrderItem">
               </variableClassRestriction>
+           </variableRestriction>
+        </filterType>
+        <filterType
+              id="IdentityEq"
+              isNegatable="false"
+              isOptionable="false"
+              maxArguments="1"
+              minArguments="1">
+           <variableRestriction
+                 variableType="ResultSetColumn">
+              <variableOdaDataTypeRestriction
+                    odaScalarDataType="JavaObject">
+              </variableOdaDataTypeRestriction>
            </variableRestriction>
         </filterType>
        </filterExpressionTypes>
