[267580]datatools.sdk and datatools.enablement.sdk were using the same feature name

--- a/features/org.eclipse.datatools.enablement.sdk.feature/feature.properties
+++ b/features/org.eclipse.datatools.enablement.sdk.feature/feature.properties
@@ -12,11 +12,11 @@
 #  *
 #  * </copyright>
 #  *
-#  * $Id: feature.properties,v 1.2 2008/09/19 03:37:11 xgu Exp $
+#  * $Id: feature.properties,v 1.1 2008/12/03 06:10:24 xgu Exp $
 #  */
 
 # "featureName" property - name of the feature
-featureName=Data Tools Platform Extender SDK
+featureName=Data Tools Platform Enablement Extender SDK
 
 # "providerName" property - name of the company that provides the feature
 providerName=Eclipse.org
