--- a/features/org.eclipse.datatools.sdk.feature/build.properties
+++ b/features/org.eclipse.datatools.sdk.feature/build.properties
@@ -15,5 +15,5 @@ generate.feature@org.eclipse.datatools.sqldevtools.ddlgen.feature.source = org.e
 generate.feature@org.eclipse.datatools.sqldevtools.parsers.feature.source = org.eclipse.datatools.sqldevtools.parsers.feature
 generate.feature@org.eclipse.datatools.sqldevtools.results.feature.source = org.eclipse.datatools.sqldevtools.results.feature
 generate.feature@org.eclipse.datatools.sqldevtools.sqlbuilder.feature.source=org.eclipse.datatools.sqldevtools.sqlbuilder.feature
-
+generate.plugin@org.eclipse.datatools.connectivity.ui.templates.source=org.eclipse.datatools.connectivity.ui.templates
  
