--- a/plugins/org.eclipse.datatools.connectivity.sqm.core/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.core/build.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2001, 2004 IBM Corporation and others.
+# Copyright (c) 2001, 2009 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -19,11 +19,11 @@ source.. = src/
 #src.includes = component.xml
 
 src.dir =		src/
-plugin.version =	1.0.1.200802262
+plugin.version =	1.1.0.qualifier
 javadoc.dir =		doc/api/
 download.dir =		./download/
-javac.source =		1.4
-javac.target =		1.4
-javacSource = 1.4
-javacTarget = 1.4
+javac.source =		1.5
+javac.target =		1.5
+javacSource = 1.5
+javacTarget = 1.5
 src.includes = about.html
