CheckIn: Fix bugzilla bug 269118 The dialogue title is not shown when create an XML data set

--- a/plugins/org.eclipse.datatools.enablement.oda.xml.ui/plugin.xml
+++ b/plugins/org.eclipse.datatools.enablement.oda.xml.ui/plugin.xml
@@ -49,7 +49,9 @@
             initialPageId="org.eclipse.datatools.connectivity.oda.xml.ui.dataset.ui1"
             supportsInParameters="false"
             supportsOutParameters="false">
-            <dataSetWizard class="org.eclipse.datatools.connectivity.oda.design.ui.wizards.DataSetWizard"/>
+            <dataSetWizard 
+                  class="org.eclipse.datatools.connectivity.oda.design.ui.wizards.DataSetWizard" 
+                  windowTitle="%wizard.data.set.window.title" />
             <dataSetPage
                   id="org.eclipse.datatools.connectivity.oda.xml.ui.dataset.ui1"
                   wizardPageClass="org.eclipse.datatools.enablement.oda.xml.ui.wizards.XmlDataSetSelectionPage"
