--- a/plugins/org.eclipse.datatools.enablement.oda.xml.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.xml.ui/plugin.properties
@@ -26,5 +26,6 @@ newwizard.name=XML Data Source
 newwizard.description=Create a XML data source connection profile
 wizard.window.title=New XML Data Source Profile
 wizard.data.source.page.title=Define the URLs to the XML file and schema information
+wizard.data.set.window.title=New XML Data Set
 profile.propertypage.name=XML Data Source Connection Properties
 preference.datasetpreview=XML Data Set
