--- a/features/org.eclipse.datatools.enablement.sqlite.feature/sourceTemplateFeature/feature.properties
+++ b/features/org.eclipse.datatools.enablement.sqlite.feature/sourceTemplateFeature/feature.properties
@@ -12,7 +12,7 @@
 #  *
 #  * </copyright>
 #  *
-#  * $Id: feature.properties,v 1.2 2008/09/19 03:43:17 xgu Exp $
+#  * $Id: feature.properties,v 1.1 2009/03/27 09:05:10 xgu Exp $
 #  */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -30,23 +30,23 @@
 # This file should be translated.
 
 # "featureName" property - name of the feature
-featureName=Data Tools Platform Enablement for Sqlite Source
+FEATURE_NAME=Data Tools Platform Enablement for Sqlite Source
 
 # "providerName" property - name of the company that provides the feature
-providerName=Eclipse.org
+PROVIDER_NAME=Eclipse.org
 
 # "description" property - description of the feature
-description=Datatools Source
+DESCRIPTION=Datatools Source
 
 # "licenseURL" property - URL of the "Feature License"
 # do not translate value - just change to point to a locale-specific HTML page
-licenseURL=license.html
+LICENSE_URL=license.html
 
 updateSiteName=Data Tools Platform (DTP) Updates
 
 # "license" property - text of the "Feature Update License"
 # should be plain text version of license agreement pointed to be "licenseURL"
-license=\
+LICENSE=\
 ECLIPSE FOUNDATION SOFTWARE USER AGREEMENT\n\
 March 17, 2005\n\
 \n\
