NEW - bug 269144: Non-externalized string in Available Customizations of Data Source Explorer view https://bugs.eclipse.org/bugs/show_bug.cgi?id=269144

--- a/plugins/org.eclipse.datatools.connectivity.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui/plugin.properties
@@ -26,6 +26,7 @@ category.name.connectionProfiles = Connection Profiles
 datatools.core.ui.preferences.data.node = Data Management
 
 DSE.content = Data Source Explorer Extension
+CP.content = Connection Profiles
 
 AddProfile.command.label = New Connection Profile Command
 AddProfile.command.description = Command to create a new connection profile
