--- a/features/org.eclipse.datatools.enablement.sqlite.feature/sourceTemplateFeature/feature.properties
+++ b/features/org.eclipse.datatools.enablement.sqlite.feature/sourceTemplateFeature/feature.properties
@@ -12,7 +12,7 @@
 #  *
 #  * </copyright>
 #  *
-#  * $Id: feature.properties,v 1.1 2009/03/27 09:05:10 xgu Exp $
+#  * $Id: feature.properties,v 1.2 2009/03/30 06:55:08 xgu Exp $
 #  */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -33,7 +33,7 @@
 FEATURE_NAME=Data Tools Platform Enablement for Sqlite Source
 
 # "providerName" property - name of the company that provides the feature
-PROVIDER_NAME=Eclipse.org
+PROVIDER_NAME=Eclipse Data Tools Platform
 
 # "description" property - description of the feature
 DESCRIPTION=Datatools Source
