--- a/features/org.eclipse.datatools.intro/feature.properties
+++ b/features/org.eclipse.datatools.intro/feature.properties
@@ -7,7 +7,7 @@ copyright=Copyright (c) 2006 Sybase, Inc. and others
 featureName=Data Tools Platform Intro
 
 # "providerName" property - name of the company that provides the feature
-providerName=Eclipse.org
+providerName=Eclipse Data Tools Platform
 
 # "updateSiteName" property - label for the update site
 updateSiteName=Data Tools Platform (DTP) Updates
