--- a/features/org.eclipse.datatools.sdk.feature/sourceTemplatePlugin/plugin.properties
+++ b/features/org.eclipse.datatools.sdk.feature/sourceTemplatePlugin/plugin.properties
@@ -12,7 +12,7 @@
 #  *
 #  * </copyright>
 #  *
-#  * $Id: plugin.properties,v 1.2 2008/02/22 08:50:26 xgu Exp $
+#  * $Id: plugin.properties,v 1.1 2008/03/04 09:43:13 xgu Exp $
 #  */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -25,7 +25,7 @@
 # ==============================================================================
 
 pluginName=Eclipse Datatools Source
-providerName=Eclipse.org
+providerName=Eclipse Data Tools Platform
 
 # ==============================================================================
 # %%% END OF TRANSLATED PROPERTIES %%%
