--- a/features/org.eclipse.datatools.enablement.sdk.feature/feature.properties
+++ b/features/org.eclipse.datatools.enablement.sdk.feature/feature.properties
@@ -12,14 +12,14 @@
 #  *
 #  * </copyright>
 #  *
-#  * $Id: feature.properties,v 1.1 2008/12/03 06:10:24 xgu Exp $
+#  * $Id: feature.properties,v 1.2 2009/03/10 08:35:44 xgu Exp $
 #  */
 
 # "featureName" property - name of the feature
 featureName=Data Tools Platform Enablement Extender SDK
 
 # "providerName" property - name of the company that provides the feature
-providerName=Eclipse.org
+providerName=Eclipse Data Tools Platform
 
 # "updateSiteName" property - label for the update site
 updateSiteName=Data Tools Platform (DTP) Updates
