--- a/features/org.eclipse.datatools.enablement.sybase.feature/feature.properties
+++ b/features/org.eclipse.datatools.enablement.sybase.feature/feature.properties
@@ -12,14 +12,14 @@
 #  *
 #  * </copyright>
 #  *
-#  * $Id: feature.properties,v 1.2 2008/05/30 21:35:40 bfitzpatrick Exp $
+#  * $Id: feature.properties,v 1.3 2008/09/19 03:40:55 xgu Exp $
 #  */
 
 # "featureName" property - name of the feature
 featureName=Data Tools Platform Enablement for Sybase
 
 # "providerName" property - name of the company that provides the feature
-providerName=Eclipse.org
+providerName=Eclipse Data Tools Platform
 
 # "updateSiteName" property - label for the update site
 updateSiteName=Data Tools Platform (DTP) Updates
