--- a/features/org.eclipse.datatools.doc.user/feature.properties
+++ b/features/org.eclipse.datatools.doc.user/feature.properties
@@ -16,7 +16,7 @@
             
 featureName = Data Tools Platform User Documentation
 
-providerName = Eclipse.org
+providerName = Eclipse Data Tools Platform
 
 featureDesc = Data Tools Platform Documentation Feature
 
