--- a/features/org.eclipse.datatools.enablement.ingres.feature/feature.properties
+++ b/features/org.eclipse.datatools.enablement.ingres.feature/feature.properties
@@ -13,7 +13,7 @@
 FEATURE_NAME=Data Tools Platform Enablement for Ingres
 
 # "providerName" property - name of the company that provides the feature
-PROVIDER_NAME=Eclipse.org
+PROVIDER_NAME=Eclipse Data Tools Platform
 
 # "description" property - description of the feature
 DESCRIPTION=DTP support for using Ingres databases
