--- a/features/org.eclipse.datatools.enablement.jdbc.feature/feature.properties
+++ b/features/org.eclipse.datatools.enablement.jdbc.feature/feature.properties
@@ -12,14 +12,14 @@
 #  *
 #  * </copyright>
 #  *
-#  * $Id: feature.properties,v 1.1 2008/02/04 21:22:20 jgraham Exp $
+#  * $Id: feature.properties,v 1.2 2008/09/19 03:39:06 xgu Exp $
 #  */
 
 # "featureName" property - name of the feature
 featureName=Data Tools Platform Enablement for JDBC
 
 # "providerName" property - name of the company that provides the feature
-providerName=Eclipse.org
+providerName=Eclipse Data Tools Platform
 
 # "updateSiteName" property - label for the update site
 updateSiteName=Data Tools Platform (DTP) Updates
