--- a/features/org.eclipse.datatools.enablement.oda.designer.feature/sourceTemplateFeature/feature.properties
+++ b/features/org.eclipse.datatools.enablement.oda.designer.feature/sourceTemplateFeature/feature.properties
@@ -12,7 +12,7 @@
 #  *
 #  * </copyright>
 #  *
-#  * $Id: feature.properties,v 1.2 2008/09/19 03:43:17 xgu Exp $
+#  * $Id: feature.properties,v 1.1 2009/03/27 09:05:18 xgu Exp $
 #  */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -33,7 +33,7 @@
 featureName=Data Tools Platform Enablement for ODA Designer Source
 
 # "providerName" property - name of the company that provides the feature
-providerName=Eclipse.org
+providerName=Eclipse Data Tools Platform
 
 # "description" property - description of the feature
 description=Datatools Source
