NEW - bug 249013: MySQL: catalogs and schemas inconsistent with other vendors https://bugs.eclipse.org/bugs/show_bug.cgi?id=249013

--- a/plugins/org.eclipse.datatools.enablement.mysql/plugin.xml
+++ b/plugins/org.eclipse.datatools.enablement.mysql/plugin.xml
@@ -19,7 +19,7 @@
         </generator>
     </extension>
     
-    <extension
+   <extension
         point="org.eclipse.datatools.connectivity.sqm.core.catalog">
         <catalog
             version="4.1"
@@ -346,4 +346,136 @@
          </properties>
       </driverTemplate>		
    </extension>
+    <extension
+          point="org.eclipse.datatools.connectivity.sqm.core.catalog">
+       <overrideLoader
+             eclass="org.eclipse.datatools.modelbase.sql.constraints.TableConstraint"
+             product="MySql"
+             provider="org.eclipse.datatools.enablement.mysql.catalog.loaders.MySqlTableConstraintLoader"
+             version="5.1">
+       </overrideLoader>
+       <overrideLoader
+             eclass="org.eclipse.datatools.modelbase.sql.tables.Table"
+             product="MySql"
+             provider="org.eclipse.datatools.enablement.mysql.catalog.loaders.MySqlTableLoader"
+             version="5.1">
+       </overrideLoader>
+       <overrideLoader
+             eclass="org.eclipse.datatools.modelbase.sql.tables.Column"
+             product="MySql"
+             provider="org.eclipse.datatools.enablement.mysql.catalog.loaders.MySqlTableColumnLoader"
+             version="5.1">
+       </overrideLoader>
+       <overrideLoader
+             eclass="org.eclipse.datatools.modelbase.sql.constraints.Index"
+             product="MySql"
+             provider="org.eclipse.datatools.enablement.mysql.catalog.loaders.MySqlTableIndexLoader"
+             version="5.1">
+       </overrideLoader>
+       <overrideLoader
+             eclass="org.eclipse.datatools.modelbase.sql.routines.Routine"
+             product="MySql"
+             provider="org.eclipse.datatools.enablement.mysql.catalog.loaders.MySqlRoutineLoader"
+             version="5.1">
+       </overrideLoader>
+    </extension>
+    <extension
+          point="org.eclipse.datatools.connectivity.sqm.core.catalog">
+       <overrideLoader
+             eclass="org.eclipse.datatools.modelbase.sql.constraints.TableConstraint"
+             product="MySql"
+             provider="org.eclipse.datatools.enablement.mysql.catalog.loaders.MySqlTableConstraintLoader"
+             version="5.0">
+       </overrideLoader>
+       <overrideLoader
+             eclass="org.eclipse.datatools.modelbase.sql.tables.Table"
+             product="MySql"
+             provider="org.eclipse.datatools.enablement.mysql.catalog.loaders.MySqlTableLoader"
+             version="5.0">
+       </overrideLoader>
+       <overrideLoader
+             eclass="org.eclipse.datatools.modelbase.sql.tables.Column"
+             product="MySql"
+             provider="org.eclipse.datatools.enablement.mysql.catalog.loaders.MySqlTableColumnLoader"
+             version="5.0">
+       </overrideLoader>
+       <overrideLoader
+             eclass="org.eclipse.datatools.modelbase.sql.constraints.Index"
+             product="MySql"
+             provider="org.eclipse.datatools.enablement.mysql.catalog.loaders.MySqlTableIndexLoader"
+             version="5.0">
+       </overrideLoader>
+       <overrideLoader
+             eclass="org.eclipse.datatools.modelbase.sql.routines.Routine"
+             product="MySql"
+             provider="org.eclipse.datatools.enablement.mysql.catalog.loaders.MySqlRoutineLoader"
+             version="5.0">
+       </overrideLoader>
+    </extension>
+    <extension
+          point="org.eclipse.datatools.connectivity.sqm.core.catalog">
+       <overrideLoader
+             eclass="org.eclipse.datatools.modelbase.sql.constraints.TableConstraint"
+             product="MySql"
+             provider="org.eclipse.datatools.enablement.mysql.catalog.loaders.MySqlTableConstraintLoader"
+             version="4.1">
+       </overrideLoader>
+       <overrideLoader
+             eclass="org.eclipse.datatools.modelbase.sql.tables.Table"
+             product="MySql"
+             provider="org.eclipse.datatools.enablement.mysql.catalog.loaders.MySqlTableLoader"
+             version="4.1">
+       </overrideLoader>
+       <overrideLoader
+             eclass="org.eclipse.datatools.modelbase.sql.tables.Column"
+             product="MySql"
+             provider="org.eclipse.datatools.enablement.mysql.catalog.loaders.MySqlTableColumnLoader"
+             version="4.1">
+       </overrideLoader>
+       <overrideLoader
+             eclass="org.eclipse.datatools.modelbase.sql.constraints.Index"
+             product="MySql"
+             provider="org.eclipse.datatools.enablement.mysql.catalog.loaders.MySqlTableIndexLoader"
+             version="4.1">
+       </overrideLoader>
+       <overrideLoader
+             eclass="org.eclipse.datatools.modelbase.sql.routines.Routine"
+             product="MySql"
+             provider="org.eclipse.datatools.enablement.mysql.catalog.loaders.MySqlRoutineLoader"
+             version="4.1">
+       </overrideLoader>
+    </extension>
+    <extension
+          point="org.eclipse.datatools.connectivity.sqm.core.catalog">
+       <overrideLoader
+             eclass="org.eclipse.datatools.modelbase.sql.constraints.TableConstraint"
+             product="MySql"
+             provider="org.eclipse.datatools.enablement.mysql.catalog.loaders.MySqlTableConstraintLoader"
+             version="4.0">
+       </overrideLoader>
+       <overrideLoader
+             eclass="org.eclipse.datatools.modelbase.sql.tables.Table"
+             product="MySql"
+             provider="org.eclipse.datatools.enablement.mysql.catalog.loaders.MySqlTableLoader"
+             version="4.0">
+       </overrideLoader>
+       <overrideLoader
+             eclass="org.eclipse.datatools.modelbase.sql.tables.Column"
+             product="MySql"
+             provider="org.eclipse.datatools.enablement.mysql.catalog.loaders.MySqlTableColumnLoader"
+             version="4.0">
+       </overrideLoader>
+       <overrideLoader
+             eclass="org.eclipse.datatools.modelbase.sql.constraints.Index"
+             product="MySql"
+             provider="org.eclipse.datatools.enablement.mysql.catalog.loaders.MySqlTableIndexLoader"
+             version="4.0">
+       </overrideLoader>
+       <overrideLoader
+             eclass="org.eclipse.datatools.modelbase.sql.routines.Routine"
+             product="MySql"
+             provider="org.eclipse.datatools.enablement.mysql.catalog.loaders.MySqlRoutineLoader"
+             version="4.0">
+       </overrideLoader>
+    </extension>
 </plugin>
