--- a/plugins/org.eclipse.datatools.connectivity/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity/plugin.properties
@@ -10,7 +10,7 @@
 ##    IBM Corporation -  fix for defect #223855
 ################################################################################ 
 Plugin.Name = Data Tools Platform Connectivity Plug-in
-Plugin.ProviderName = Eclipse.org
+Plugin.ProviderName = Eclipse Data Tools Platform
 
 extension-point.name.connectionProfile = Connection Profile Extension
 extension-point.name.driverExtension = driverExtension
