--- a/plugins/org.eclipse.datatools.connectivity.oda.design.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.design.ui/plugin.properties
@@ -20,3 +20,4 @@ oda.parent.category.id=org.eclipse.datatools.connectivity.oda.profileCategory
 plugin.name=DTP ODA Designer UI Framework Plug-in
 oda.parent.category.name=ODA Data Sources
 oda.preference.page.name=Open Data Access
+providerName=Eclipse Data Tools Platform
