--- a/plugins/org.eclipse.datatools.enablement.finfo/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.finfo/plugin.properties
@@ -9,4 +9,4 @@
 #     Sybase, Inc. - initial API and implementation
 ###############################################################################
 pluginName=Eclipse Data Tools Platform Enablement
-providerName=Eclipse.org
+providerName=Eclipse Data Tools Platform
