--- a/plugins/org.eclipse.datatools.enablement.jdt.classpath/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.jdt.classpath/plugin.properties
@@ -9,6 +9,6 @@
 ##    Sybase, Inc. - initial API and implementation
 ################################################################################ 
 Plugin.Name = Data Tools Platform Connectivity JDT Extension Plug-in
-Plugin.ProviderName = Eclipse.org
+Plugin.ProviderName = Eclipse Data Tools Platform
 
 driver.classpath.container.name = Connectivity Driver Definition
