--- a/plugins/org.eclipse.datatools.enablement.oda.ecore/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.ecore/plugin.properties
@@ -6,6 +6,7 @@
 #
 oda.data.source.id=org.eclipse.datatools.enablement.oda.ecore
 oda.parent.category.id=org.eclipse.datatools.connectivity.oda.profileCategory
+providerName=Eclipse Data Tools Platform
 #
 ###############################################################################
 # NLS String
