--- a/plugins/org.eclipse.datatools.enablement.oda.xml.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.xml.ui/plugin.properties
@@ -29,3 +29,4 @@ wizard.data.source.page.title=Define the URLs to the XML file and schema informa
 wizard.data.set.window.title=New XML Data Set
 profile.propertypage.name=XML Data Source Connection Properties
 preference.datasetpreview=XML Data Set
+providerName=Eclipse Data Tools Platform
