--- a/plugins/org.eclipse.datatools.sqltools.ddlgen.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.sqltools.ddlgen.ui/plugin.properties
@@ -10,4 +10,4 @@
 ###############################################################################
 pluginName=Eclipse Data Tools Platform FE UI Plug-in
 nl1PluginName = FE UI NL1 Fragment
-providerName=Eclipse.org
+providerName=Eclipse Data Tools Platform
