--- a/plugins/org.eclipse.datatools.sqltools.sqlbuilder/about.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqlbuilder/about.properties
@@ -1,15 +1,18 @@
-# NLS_MESSAGEFORMAT_VAR          needed to handle quotes correctly
 ###############################################################################
-# Copyright (c) 2001, 2006 IBM Corporation and others.
+# Copyright (c) 2006 Sybase, Inc. and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
 # http://www.eclipse.org/legal/epl-v10.html
-# 
+#
 # Contributors:
-#     IBM Corporation - initial API and implementation
+#     Sybase, Inc. - initial API and implementation
 ###############################################################################
+blurb=Eclipse Data Tools Platform Model Base\n\
+\n\
+Version: {featureVersion}\n\
+Build id: {0}\n\
+\n\
+(c) Copyright Eclipse contributors and others 2005, 2007.  All rights reserved.\n\
+Visit http://www.eclipse.org/datatools
 
-plugin.Name=Data Core Plugin
-nl1PluginName = Data Core NL1 Fragment
-plugin.Provider=Eclipse Data Tools Platform
