--- a/plugins/org.eclipse.datatools.enablement.oda.ecore/build.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.ecore/build.properties
@@ -4,7 +4,11 @@ bin.includes = plugin.xml,\
                META-INF/,\
                .,\
                plugin.properties,\
-               about.html
+               about.html,\
+               about.ini,\
+               about.mappings,\
+               about.properties,\
+               eclipse32.png
 src.includes = about.html
 
 
