--- a/plugins/org.eclipse.datatools.sqltools.data.core/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.data.core/build.properties
@@ -4,7 +4,11 @@ bin.includes = plugin.xml,\
                .,\
                plugin.properties,\
                about.html,\
-               META-INF/
+               META-INF/,\
+               about.ini,\
+               about.mappings,\
+               about.properties,\
+               eclipse32.png
 src.dir = src/
 plugin.version =	1.0.0.200706151
 javadoc.dir =		doc/api/
