--- a/plugins/org.eclipse.datatools.sqltools.ddlgen.ui/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.ddlgen.ui/build.properties
@@ -5,6 +5,10 @@ bin.includes = plugin.xml,\
                plugin.properties,\
                icons/,\
                about.html,\
-               META-INF/
+               META-INF/,\
+               about.ini,\
+               about.mappings,\
+               about.properties,\
+               eclipse32.png
 plugin.version = 1.0.0.200706071
 src.includes = about.html
