--- a/plugins/org.eclipse.datatools.sqltools.result/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.result/build.properties
@@ -6,7 +6,11 @@ bin.includes = META-INF/,\
                icons/,\
                plugin.properties,\
                plugin.xml,\
-               schema/
+               schema/,\
+               about.ini,\
+               about.mappings,\
+               about.properties,\
+               eclipse32.png
                
 src.dir =		src/
 plugin.version =	1.0.0.200803241
