--- a/plugins/org.eclipse.datatools.sqltools.sqlbuilder/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqlbuilder/build.properties
@@ -3,7 +3,11 @@ bin.includes = plugin.xml,\
                plugin.properties,\
                META-INF/,\
                about.html,\
-               .
+               .,\
+               about.ini,\
+               about.mappings,\
+               about.properties,\
+               eclipse32.png
 jars.compile.order = .
 source.. = src/
 output.. = bin/
