--- a/plugins/org.eclipse.datatools.enablement.jdt.classpath/build.properties
+++ b/plugins/org.eclipse.datatools.enablement.jdt.classpath/build.properties
@@ -2,7 +2,11 @@ bin.includes = plugin.xml,\
                plugin.properties,\
                about.html,\
                META-INF/,\
-               .
+               .,\
+               about.ini,\
+               about.mappings,\
+               about.properties,\
+               eclipse32.png
 jars.compile.order = .
 src.dir			 = src/
 plugin.version =	1.0.1.200710171
