--- a/plugins/org.eclipse.datatools.sqltools.parsers.sql/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.parsers.sql/build.properties
@@ -4,7 +4,11 @@ bin.includes = plugin.xml,\
                .,\
                plugin.properties,\
                META-INF/,\
-               about.html
+               about.html,\
+               about.ini,\
+               about.mappings,\
+               about.properties,\
+               eclipse32.png
 
 src.dir = src/
 plugin.version = 1.0.0.200706161
