CheckIn:Bugzilla116636--[XML Data Source Improvements] XML data source does not support parameters yet.

--- a/plugins/org.eclipse.datatools.enablement.oda.xml.ui/plugin.xml
+++ b/plugins/org.eclipse.datatools.enablement.oda.xml.ui/plugin.xml
@@ -47,7 +47,7 @@
       <dataSetUI
             id="org.eclipse.datatools.enablement.oda.xml.dataSet"
             initialPageId="org.eclipse.datatools.connectivity.oda.xml.ui.dataset.ui1"
-            supportsInParameters="false"
+            supportsInParameters="true"
             supportsOutParameters="false">
             <dataSetWizard 
                   class="org.eclipse.datatools.connectivity.oda.design.ui.wizards.DataSetWizard" 
