NEW - bug 272319: Decorators have no names. https://bugs.eclipse.org/bugs/show_bug.cgi?id=272319

--- a/plugins/org.eclipse.datatools.enablement.sybase.asa.ui/plugin.xml
+++ b/plugins/org.eclipse.datatools.enablement.sybase.asa.ui/plugin.xml
@@ -205,7 +205,7 @@
           adaptable="false"
           class="org.eclipse.datatools.enablement.asa.internal.ui.decorator.ProxyTableDecorationService"
           id="org.eclipse.datatools.enablement.sybase.asa.proxytabledecorator"
-          label="org.eclipse.datatools.enablement.sybase.asa.proxytabledecorator"
+          label="%decorator.label"
           lightweight="true"
           location="TOP_LEFT"
           objectClass="org.eclipse.datatools.enablement.asa.internal.ui.decorator.ProxyTableDecorationService"
