--- a/plugins/org.eclipse.datatools.enablement.sybase.ase.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.sybase.ase.ui/plugin.properties
@@ -27,3 +27,5 @@ webservicetable.node.name = Web Services as Tables Folder
 
 pluginName = ASE Enablement UI Plug-in
 providerName = Eclipse.org
+
+decorator.label = Sybase ASE Proxy Table Decorator
