--- a/plugins/org.eclipse.datatools.enablement.sybase.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.sybase.ui/plugin.properties
@@ -38,3 +38,4 @@ providerName = Eclipse.org
 
 database.connection.profile.title = Database Connection Profile
 
+decorator.label = Sybase System Table Decorator
