--- a/plugins/org.eclipse.datatools.enablement.sybase.asa.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.sybase.asa.ui/plugin.properties
@@ -19,3 +19,5 @@ datatype.node.name = Data Type Folder
 
 Plugin.name = Sybase ASA Connection Profile UI Plug-in
 Plugin.providerName = Eclipse.org
+
+decorator.label = Sybase ASA Proxy Table Decorator
