[264571] Modified the build.properties file of plugin o.e.d.sqltools.data.core to add the schema folder to the binary build so that clients can use it without getting the source from CVS

--- a/plugins/org.eclipse.datatools.sqltools.data.core/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.data.core/build.properties
@@ -8,7 +8,8 @@ bin.includes = plugin.xml,\
                about.ini,\
                about.mappings,\
                about.properties,\
-               eclipse32.png
+               eclipse32.png,\
+               schema/
 src.dir = src/
 plugin.version =	1.0.0.200706151
 javadoc.dir =		doc/api/
