[273180]org.eclipse.datatools.enablement.ingres.ui has compile error in daily build v20090422-1114 Commit the patch

--- a/plugins/org.eclipse.datatools.enablement.ingres.ui/plugin.xml
+++ b/plugins/org.eclipse.datatools.enablement.ingres.ui/plugin.xml
@@ -152,5 +152,21 @@
             serviceClass="org.eclipse.datatools.enablement.ingres.internal.ui.plan.IngresPlanService">
       </planService>
    </extension>
+   <extension
+         point="org.eclipse.datatools.sqltools.editor.core.ui.dbUIConfigurations">
+      <dbUIConfiguration
+            configurationClass="org.eclipse.datatools.enablement.ingres.internal.ui.core.IngresDBUIConfiguration"
+            default="false"
+            product="Ingres"
+            version="2006">
+      </dbUIConfiguration>
+   </extension>
+   <extension
+         point="org.eclipse.datatools.sqltools.sql.ui.sqlNodesImage">
+      <nodeImage
+            imageHandler="org.eclipse.datatools.enablement.ingres.internal.ui.parser.IngresASTSQLStatementImageHandler"
+            nodeClazzName="org.eclipse.datatools.enablement.ingres.internal.ui.parser.ASTSQLStatement">
+      </nodeImage>
+   </extension>
 
 </plugin>
