256368 "Multi-page SQL Schema Editor Framework & exemplary implementations for Sybase ASA in enablement project".

--- a/plugins/org.eclipse.datatools.sqltools.debugger.core.ui/plugin.xml
+++ b/plugins/org.eclipse.datatools.sqltools.debugger.core.ui/plugin.xml
@@ -5,7 +5,7 @@
    	<extension
          point="org.eclipse.core.runtime.preferences">
       <initializer
-            class="org.eclipse.datatools.sqltools.debugger.core.internal.DebuggerPreferenceInitializer">
+            class="org.eclipse.datatools.sqltools.debugger.core.ui.DebuggerPreferenceInitializer">
       </initializer>
     </extension>
 
