[234800] SQL GenModel doesn't exist in packaged plug-in

--- a/plugins/org.eclipse.datatools.modelbase.sql/build.properties
+++ b/plugins/org.eclipse.datatools.modelbase.sql/build.properties
@@ -20,7 +20,8 @@ bin.includes = META-INF/,\
                about.properties,\
                build.properties,\
                eclipse32.gif,\
-               eclipse32.png
+               eclipse32.png,\
+               model/
 
 src.dir =		src/
 plugin.version =	1.0.0.200706071
