[256357] Include model files in binary build

--- a/plugins/org.eclipse.datatools.connectivity.oda.design/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.design/build.properties
@@ -2,9 +2,12 @@ bin.includes = plugin.xml,\
                .,\
                about.html,\
                META-INF/,\
-               plugin.properties
-javac.source =           1.4
-javac.target =           1.4
+               plugin.properties,\
+               model/DesignXML.xsd,\
+               model/odaDesignSession.genmodel,\
+               model/org.eclipse.datatools.connectivity.oda.design.ecore
+javac.source =           1.5
+javac.target =           1.5
 build.result.dir =	 	 ./
 javadoc.dir =            doc/api/
 download.dir =           ./download/
