BZ-220318 BZ-245484 BZ-246106 BZ-260205 BZ-269481

--- a/plugins/org.eclipse.datatools.sqltools.result.ui/src/org/eclipse/datatools/sqltools/result/ui/PluginResources.properties
+++ b/plugins/org.eclipse.datatools.sqltools.result.ui/src/org/eclipse/datatools/sqltools/result/ui/PluginResources.properties
@@ -12,6 +12,7 @@ ResultHistorySection_consumer_name=Consumer Name
 ResultHistorySection_connection_profile=Connection Profile
 ResultHistoryPage_action_type=Action Ty&pe
 ResultHistoryPage_auto_persist=A&utomatically persist result history
+ResultHistoryPage_auto_clean=Automatically cl&ean up result history
 ResultHistoryPage_consumer_name=&Consumer Name
 ResultHistoryPage_tooltip_status=Check to show 'Status' column
 ResultHistoryPage_tooltip_date=Check to show 'Date' column
@@ -331,13 +332,14 @@ ResultHistoryPage_tooltip_frequency=Check to show 'Frequency' column
 ResultHistoryPage_tooltip_actiontype=Check to show 'Action Type' column
 ResultHistoryPage_no_column_selected=At least one column should be selected
 ResultHistoryPage_tooltip_auto_persist=Save result history when Eclipse shuts down and load result history to SQL Results view when Eclipse starts up
+ResultHistoryPage_tooltip_auto_clean=Clean up result history when Eclipse shuts down
 StatusLogger_no_bundle=No resource bundle has been set for the Logger
 StatusLogger_possible_args=\ possible args: {0}, {1}, {2}, {3}
 StatusLogger_no_bundle_1=No resource is associated with key "
 StatusLogger_possible_args_1=\ possible args: {0}, {1}, {2}, {3}
 ResultHistorySection_query_expression_tooltip=Lucene engine is used here for query\nDefault field: operation --- field name for 'Operation' column\nField name for 'Frequency' column: frequency\nField name for 'Action type' column: action\nField name for 'Consumer Name' column: consumer\n'Status','Date','Connection Profile' columns are not used for query purpose, try to use filters instead for these columns
-ResultsViewPlugin_load_history_error=Error occurs when loading result history
-ResultsViewPlugin_persist_history_error=Error occurs when persisting result history
+
+
 SingleWindowTextSection_inout_params=In/out parameters:
 SingleWindowGridSection_inout_params=In/out parameters:
 SingleWindowGridSection_warning_info=Displaying stopped due to tables number limitation, to enlarge the number, open the preference page and change the value
