--- a/plugins/org.eclipse.datatools.sqltools.result/src/org/eclipse/datatools/sqltools/result/PluginResources.properties
+++ b/plugins/org.eclipse.datatools.sqltools.result/src/org/eclipse/datatools/sqltools/result/PluginResources.properties
@@ -41,4 +41,14 @@ IResultConstants_html_name =Web Page(*.html,*,htm)
 IResultConstants_xml_name =XML File(*.xml)
 IResultConstants_all_name =All Files(*.*)
 
+##########################################################
+#  ResultsViewPlugin Error Message
+##########################################################
+ResultsViewPlugin_class_incompatible_error=Old results have been saved to \"backup\" folder
+ResultsViewPlugin_load_history_error=Error occurs when loading result history
+ResultsViewPlugin_persist_history_error=Error occurs when persisting result history
 ResultsViewPlugin_load_listener_error=Error occurs when loading SQL results listener
+File_copy_error=Error occurs when copy files
+
+SerializationHelper_serialization_error=Error occurs when serializing result file
+SerializationHelper_deserialization_error=Error occurs when deserializing result file
