--- a/plugins/org.eclipse.datatools.sqltools.sqlscrapbook/plugin.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqlscrapbook/plugin.properties
@@ -37,3 +37,5 @@ open_sql_scrapbook_tooltip=Open scrapbook to edit SQL statements
 DatabaseManagement.ExecuteSQLFile=E&xecute SQL Files
 DatabaseManagement.SetConnectionInfo=&Set Connection Info
 
+AddBookmark.label=Add Boo&kmark...
+AddBookmark.tooltip=Add Bookmark...
