[234800]SQL GenModel doesn't exist in packaged plug-in

--- a/plugins/org.eclipse.datatools.modelbase.sql/build.properties
+++ b/plugins/org.eclipse.datatools.modelbase.sql/build.properties
@@ -29,5 +29,6 @@ javadoc.dir =		doc/api/
 download.dir =		./download/
 javac.source =		1.5
 javac.target =		1.5
-src.includes = about.html
+src.includes = about.html,\
+               model/
 
