BZ-221362 BZ-269480 BZ-231401

--- a/plugins/org.eclipse.datatools.sqltools.result/src/org/eclipse/datatools/sqltools/result/PluginResources.properties
+++ b/plugins/org.eclipse.datatools.sqltools.result/src/org/eclipse/datatools/sqltools/result/PluginResources.properties
@@ -52,3 +52,5 @@ File_copy_error=Error occurs when copy files
 
 SerializationHelper_serialization_error=Error occurs when serializing result file
 SerializationHelper_deserialization_error=Error occurs when deserializing result file
+
+ResultSection_Status_ElapsedTime=Elapsed Time:  {0} hr, {1} min, {2} sec, {3} ms.
