BZ-269482 BZ-269483 BZ-274216 BZ-274224

--- a/plugins/org.eclipse.datatools.sqltools.result.ui/src/org/eclipse/datatools/sqltools/result/ui/PluginResources.properties
+++ b/plugins/org.eclipse.datatools.sqltools.result.ui/src/org/eclipse/datatools/sqltools/result/ui/PluginResources.properties
@@ -238,6 +238,7 @@ ResultFormatWizardPage_label_format =&Format
 ####################################################
 #  SaveResultSetDialog resource Message
 ####################################################
+find_replace_action_label=&Find/Replace
 Save_name=&Save
 Export_name=&Export
 Print_name=P&rint
@@ -325,7 +326,9 @@ ContainerSelectionGroup_message=&Enter or select the parent folder:
 ContainerSelectionGroup_folder_select=Select the folder:
 ResultHistoryLuceneIndex_io_error=Unexpected RAM I/O exception occurs
 ResultHistoryLuceneIndex_parser_error=Unexpected parsing exception occurs
-ResultHistoryPage_columns_group_name=Columns to display
+ResultHistoryPage_columns_group_name=Columns Setting
+ResultHistoryPage_columns_selectedlist_name=Selected Columns:
+ResultHistoryPage_columns_availablelist_name=Available Columns:
 ResultHistoryPage_connection_profile=Co&nnection Profile
 ResultHistoryPage_tooltip_operation=Check to show 'Operation' column
 ResultHistoryPage_tooltip_frequency=Check to show 'Frequency' column
