--- a/plugins/org.eclipse.datatools.sqltools.result.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.sqltools.result.ui/plugin.properties
@@ -7,6 +7,7 @@ SQLResultsView.resultsetviewer.page=Result Set Viewer Options
 RemoveResultAction.command.name=Remove Result
 RemoveAllResultAction.command.name=Remove All Visible Results
 TerminateInstanceAction.command.name=Terminate Result
+CopyRowsAction.command.name=Copy Rows
 DataTools.name=Data Tools
 Outputter.plain.text=Plain Text
 Outputter.xml=XML
