--- a/plugins/org.eclipse.datatools.sqltools.result.ui/plugin.xml
+++ b/plugins/org.eclipse.datatools.sqltools.result.ui/plugin.xml
@@ -51,6 +51,11 @@
             categoryId="org.eclipse.datatools.sqltools.result.category"
             id="org.eclipse.datatools.sqltools.result.terminate"
             name="%TerminateInstanceAction.command.name"/>
+      <command
+            categoryId="org.eclipse.datatools.sqltools.result.category"
+            id="org.eclipse.datatools.sqltools.result.copyrows"
+            name="%CopyRowsAction.command.name">
+      </command>
    </extension>
    <extension
          point="org.eclipse.ui.bindings">
@@ -69,6 +74,11 @@
             contextId="org.eclipse.ui.contexts.window"
             schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
             sequence="M1+BREAK"/>
+      <key
+            commandId="org.eclipse.datatools.sqltools.result.copyrows"
+            contextId="org.eclipse.ui.contexts.window"
+            schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
+            sequence="M1+R"/>
    </extension>
    <extension
          point="org.eclipse.core.runtime.preferences">
