[262874] ODA Dynamic Query Result Specification - refined experimental API to include null value ordering type in sort specification

--- a/tests/org.eclipse.datatools.connectivity.oda.consumer.testdriver/plugin.xml
+++ b/tests/org.eclipse.datatools.connectivity.oda.consumer.testdriver/plugin.xml
@@ -58,7 +58,6 @@
            point="org.eclipse.datatools.connectivity.oda.dynamicResultSet">
         <contributor
               specificationFactoryClass="org.eclipse.datatools.connectivity.oda.consumer.testdriver.spec.impl.MySpecFactory"
-              supportsRowOrdering="true"
               validatorClass="org.eclipse.datatools.connectivity.oda.consumer.testdriver.spec.impl.ExpressionTester">
          <supportedDataSetType
                odaDataSetId="org.eclipse.datatools.connectivity.oda.consumer.testdriver.dataSet"
@@ -77,6 +76,7 @@
          <supportedOdaFilterExpression
                name="NotExpression">
          </supportedOdaFilterExpression>
+         <supportsRowOrdering></supportsRowOrdering>
         </contributor>
         <filterExpressionTypes>
          <filterType
